--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html class="">
 <head>
   <meta charset="UTF-8">
+  <link rel=”shortcut icon” href=”/images/favicon.ico” type=”image/x-icon” />
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Provide a description for your website to make it visible to search engines.">
@@ -75,7 +76,7 @@
     <input type="radio" name="trigger" class="trigger" id="proj-8" />
   
 
-  <input type="radio" name="trigger" id="return" class="return" />
+
 
   <div class="work-belt">
 
