--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
 <section>
 
-  <h3 id="contact">contactez moi</h3>
+  <h3 id="contact">contact</h3>
 
 <form method="POST" action="//formspree.io/thekornmaster@hotmail.com">
 
