--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <link rel=”shortcut icon” href=”/images/favicon.ico” type=”image/x-icon” />
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Provide a description for your website to make it visible to search engines.">
-  <meta rel="author" href="https://plus.google.com/u/0/+DevTipsForDesigners/">
-  <meta rel="publisher" href="https://plus.google.com/u/0/+DevTipsForDesigners/">
+  <meta name="description" content="Marc St-Pierre développeur web.">
+  <meta rel="author" href="Marc St-Pierre">
+  <meta rel="publisher" href="Marc St-Pierre">
 
   <title>Marc St-Pierre</title>
 
@@ -48,7 +48,7 @@
 
 
   <div class="blurb">
-    <p><strong>Travis specializes in making things</strong> for human people. Most of the things he makes are <a href="http://travisneilson.com" target="_blank">digital interfaces</a>, but he also puts effort into crafting <a href="http://soundcloud.com/travis-neilson" target="_blank">next-level beats</a> and <a href="http://youtube.com/user/devtipsfordesigners" target="_blank">YouTube videos</a> about making codes happen.</p>
+    <p><strong>Marc est spécialisé en transformation</strong> du néant corrompu en interface structuré pour l’homme. Il unis chaque coté de son esprit en mélangent Art et logique dans un aboutissement unique.</p>
 
   </div>
 
