--- a/form-success/index.html
+++ b/form-success/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Provide a description for your website to make it visible to search engines.">
-  <meta rel="author" href="https://plus.google.com/u/0/+DevTipsForDesigners/">
-  <meta rel="publisher" href="https://plus.google.com/u/0/+DevTipsForDesigners/">
+  <meta name="description" content="Marc St-Pierre développeur web.">
+  <meta rel="author" href="Marc St-Pierre">
+  <meta rel="publisher" href="Marc St-Pierre">
   
   <META http-equiv="refresh" content="2; URL=/">
   
