--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 
   <div class="blurb">
-    <p><strong>Marc est spécialisé en transformation</strong> du néant corrompu en interface structuré pour l’homme. Il unis chaque coté de son esprit en mélangent Art et logique dans un aboutissement unique.</p>
+    <p><strong>Marc est spécialisé en transformation</strong> du néant corrompu en interface structurée pour l’homme. Il unit chaque côté de son esprit et mélange Art et logique dans un aboutissement unique.</p>
 
   </div>
 
